# demo-neat

./: .gitignore  DECISIONS.md  README.md  REVIEW.md  appendix.md  priority-task-and-implementation-plan.md
Setup/: neat_insight.md  neat_installation_setup-.md  neat_installation_setup.md  neat_on_windows.md
apps/: README.md
apps/benchmark/: README.md  main.py
apps/detection-vlm-assistant/: README.md  main.py
apps/multi-model-load-probe/: README.md  main.cpp
apps/multi-stream-yolo-yolo11/: README.md  main.py
apps/pcb-defect-detection-yolo26n/: .gitignore  README.md  main.py  requirements.txt
apps/quad-stream-quad-model/: CMakeLists.txt  LEARNING.md  README.md  TEACHING.md  main.cpp  main.py
apps/quad-stream-quad-model/assets/models/: .gitignore
apps/quad-stream-quad-model/config/: default.conf
apps/quad-stream-quad-model/src/: __init__.py  decoders.py  overlay.py
apps/quad-stream-quad-model/tools/: pose_probe.py
apps/single-stream-open-pose/: CMakeLists.txt  README.md  main.cpp
apps/single-stream-open-pose/config/: default.conf
apps/single-stream-open-pose/src/: utils.cpp  utils.h
apps/single-stream-yolo-insight/: CMakeLists.txt  README.md  main.cpp  main.py
apps/single-stream-yolo-yolo11/: CMakeLists.txt  README.md  main.cpp  main.py
apps/single-stream-yolo-yolo11/config/: default.conf
apps/single-stream-yolo-yolov8m/: CMakeLists.txt  README.md  main.cpp
apps/single-stream-yolo-yolov8m/config/: default.conf
apps/single-stream-yolo-yolov8n/: README.md  (+1 more)
apps/single-stream-yolov8n-seg/: CMakeLists.txt  README.md  main.cpp  main.py
apps/single-stream-yolov8n-seg/config/: default.conf
installation/: README.md  components.md  neat_insight.md  neat_on_windows.md
llima/: README.md
model-compilation/: .gitignore  COMPILE-COMMANDS.md  MODEL-COMPILATION.md  PROJECT_PLAN.md  README.md  REPLICATION.md  compile_all.sh  models.yaml
multi-model-load-probe/: CMakeLists.txt  README.md  main.cpp  run_load_only.sh  run_separate_bounded.sh  run_separate_processes.sh  stop_separate_processes.sh
multi-model-load-probe/config/: default.conf
neat-tutorial/: README.md
pcb-defect-detection-yolo26n/: README.md  main.py
single-stream-open-pose/: CMakeLists.txt  README.md  main.cpp
single-stream-yolo-yolo11/: README.md  main.cpp  main.py
single-stream-yolo-yolov8m/: README.md  main.cpp
single-stream-yolo-yolov8n/: CMakeLists.txt  README.md  main.cpp
single-stream-yolo26n/: CMakeLists.txt  README.md  main.cpp  main.py
single-stream-yolov8n-seg/: README.md  main.cpp
training/: NEAT_4_DAY_TRAINING_PROGRAM.md
tutorial/: README.md
(+222 files in other folders)
